2007-10-26  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use -Wno-error on Windows.
	* urbi-prog-cxx.m4: Here.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Coding style.
	* ax_boost.m4: Make it slightly more readable.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	init LIBS.
	* init.mk: Here.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Coding style.
        * ax_boost_thread.m4: Modernize coding style a bit.
        (AX_BOOST_THREAD_): New, extracted from...
        (AX_BOOST_THREAD): here.

2007-10-21  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Don't use -pipe.
	* build-aux/urbi-prog-cxx.m4 (URBI_PROG_CXX): Do not use -pipe when
	GCC is detected, it doesn't speed up the compilation.  See this
	thread and its replies:
	  http://lists.gnu.org/archive/html/automake/2007-10/msg00086.html

2007-10-20  Akim Demaille  <demaille@gostai.com>

	Reformat.
	* urbi-resolve-dir.m4: Comment to please AC macro archive.
	But this piece of junk wants dnl instead of #.

2007-10-20  Akim Demaille  <akim.demaille@free.fr>

	Don't activate .exe => .log.
	* check.mk: Here.
	Sometimes it triggers when it should not.

2007-10-20  Akim Demaille  <akim.demaille@free.fr>

	Indentation changes.
	* build-aux/ax_boost.m4: here.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Create the log dir if needed.
	* check.mk (am__check_pre): Do it.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Support tests in sub dirs.
	* check.mk (am__check_post): Change the handling of XFAIL_TESTS
	to support subdir tests.
	Also, unfortunately, report about the log file, which directory
	is correct, instead of relying on the test file itself, which
	location is unclear.
	If you know how to fix this, be my guest.

2007-10-12  Guillaume Deslandes  <deslandes@gostai.com>

	Fix openr test
	* urbi-libport.m4: Here.

2007-10-12  Guillaume Deslandes  <deslandes@gostai.com>

	Test if "$openr" is not empty
	* urbi-libport.m4: Here.
	An empty variable was considered true and prevented boost_thread